--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/build.gradle
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile files('src/main/libs/achartengine-1.1.0.jar')
     compile files('src/main/libs/mpandroidchartlibrary-2-1-6.jar')
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
 }
