Views have Correct Names, new eeg picture, no more muscle

--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/AndroidManifest.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
         </activity>
         <activity
             android:name=".GraphActivity"
-            android:label="GraphActivity"
+            android:label="Realtime EEG Graph"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
