--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/build.gradle
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile files('src/main/libs/mpandroidchartlibrary-2-1-6.jar')
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
+    compile files('src/main/libs/bedk.jar')
 }
