Login ui complete

--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/AndroidManifest.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/AndroidManifest.xml
@@ -92,7 +92,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="Log In to your Account"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.Login">
         </activity>
         <activity
             android:name=".RegisterActivity"
