--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/AndroidManifest.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/AndroidManifest.xml
@@ -113,6 +113,10 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <activity
+            android:name=".ClinicianSettingsActivity"
+            android:label="Edit Account Settings">
+        </activity>
     </application>
 
 </manifest>
