--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/AndroidManifest.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/AndroidManifest.xml
@@ -53,8 +53,7 @@
         </activity>
         <activity
             android:name=".RecordsActivity"
-            android:label="@string/title_activity_records"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/title_activity_records">
         </activity>
         <activity
             android:name=".RecordReadingActivity"
